force-app/main/default/objects/State_Transition__c/State_Transition__c.object-meta.xml
<CustomObject>
    <label>State Transition</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>State Transition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>