force-app/main/default/objects/State_Transition__c/fields/Allowed_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Profiles__c</fullName>
    <label>Allowed Profiles</label>
    <type>TextArea</type>
</CustomField>