force-app/main/default/objects/State_Transition__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Name of the picklist field related to the selected object</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>