force-app/main/default/objects/State_Transition__c/fields/To_State__c.field-meta.xml
<CustomField>
    <fullName>To_State__c</fullName>
    <label>To State</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>